--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ idna==3.8
 msgpack==1.0.8
 proto-plus==1.24.0
 protobuf==5.27.3
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
